<resources>
    <string name="app_name">AIDB_Assignment</string>
    <!--Splash Screen-->
    <string name="splash">Splash</string>

    <!--Signup Screen-->
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name*</string>
    <string name="user_name_ast">User Name*</string>
    <string name="email_address">Email Address*</string>
    <string name="password_ast">Password*</string>
    <string name="please_fill_out_the_details_below_to_create_an_account">Please fill out the details below to create an account</string>

    <!--Dashboard Screen-->
    <string name="dashboard">Dashboard</string>

    <!--Validation Error-->
    <string name="err_no_network_available">Please check your internet connection and try again later.</string>
    <string name="err_enter_user_name">Please enter your user name!!!</string>
    <string name="err_enter_valid_name">Your user name must be more than 3 and less than 35 characters</string>
    <string name="err_enter_email_address">Please enter your email!!!</string>
    <string name="err_valid_email">Please enter a valid email!!!</string>
    <string name="err_enter_password">Please enter your password!!!</string>
    <string name="err_valid_password">Password must be at least 8 and less than 35 characters, and must include at least one upper case letter, one lower case letter, and one numeric digits, and can include special characters!!!</string>
</resources>