<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:srcCompat="@drawable/ic_launcher_background" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/appLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginInstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/please_fill_out_the_details_below_to_create_an_account"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/verticalRightGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/loginTittle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            style="@style/BaseAppTheme.EdtTxt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="35"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/verticalRightGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/loginInstruction" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmailId"
            style="@style/BaseAppTheme.EdtTxt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/verticalRightGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtPassword"
            style="@style/BaseAppTheme.EdtTxt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_ast"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/verticalRightGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailId" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            style="@style/BaseAppTheme.btnStyleContinue"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="@id/verticalRightGuideline"
            app:layout_constraintStart_toStartOf="@id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <include layout="@layout/guideline_left" />

        <include layout="@layout/guideline_right" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>